examples/nextjs-commerce/packages/spree/dist/errors/MissingConfigurationValueError.js
class MissingConfigurationValueError extends Error {
}
export { MissingConfigurationValueError as default };
